assets/css/style.scss
/* ... */
@media screen and (min-width: 42em) and (max-width: 64em) {
    .main-content {
        max-width: 90%;
        margin: auto;
    }
    h2.project-tagline {
        font-size: 2.3em;
    }
    .main-content h1 {
        margin-top: 0.8em;
        margin-bottom: 0.6em;
        font-size: 2.8em;
    }
    .main-content h2 {
        margin-top: 1.4em;
        margin-bottom: 0.5em;
        font-size: 2em;
    }
    .main-content h3 {
        font-size: 1.5em;
    }
    .main-content p, .main-content div, .main-content ul, .main-content ol {
        font-size: 2em;
    }
    .main-content li {
        margin-bottom: 0.8em;
    }
    .page-header {
        padding: 3rem 2rem 2.5rem;
    }
    div#acuity-schedule-container > div#loading-indicator {
        font-size: 1.2em;
    }
    div#acuity-schedule-container {
        padding-bottom: 150%;
    }
}

@media screen and (max-width: 42em) {
    .main-content {
        max-width: 95%;
    }
    h2.project-tagline {
        font-size: 1.8em;
        text-align: center;
        width: 100%;
        padding: 0 0.5em;
    }
    .main-content h1 {
        margin-top: 0.8em;
        margin-bottom: 0.6em;
        font-size: 2.4em;
    }
    .main-content h2 {
        margin-top: 1.4em;
        margin-bottom: 0.5em;
        font-size: 1.9em;
    }
    .main-content h3 {
        font-size: 1.4em;
    }
    .main-content p, .main-content div, .main-content ul, .main-content ol {
        font-size: 1.6em;
    }
    .main-content li {
        margin-bottom: 0.8em;
    }
    .page-header {
        padding: 2.5rem 1.5rem 2rem;
    }
    div#acuity-schedule-container > div#loading-indicator {
        font-size: 1.2em;
    }
    div#acuity-schedule-container {
        padding-bottom: 150%;
    }
    .btn.section-btn {
        width: 100%;
        max-width: 320px;
        padding: 16px 24px;
    }
}

@media(max-width: 992px) {
    ul.nav.navbar-nav.navbar-right li a {
        font-size: 0.9em;
    }
}

@media(min-width: 768px) {
    body {
        padding-top: 108px;  // taller desktop nav (72px logo + padding + 8px nav padding)
    }
    .nav-wordmark {
        display: inline;
    }
    .navbar-fixed-top {
        padding: 4px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .nav-logo {
        height: 92px;
    }

    .page-band {
        min-height: 160px;
        padding: 2.5rem 3rem 2rem;
    }

    .page-band-title {
        font-size: 2.8em;
    }

    .subpage-spacer {
        height: 108px;
    }

    .navbar-fixed-top .navbar-brand {
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }

    div.collapse.navbar-collapse > ul.nav > li.page-scroll > ul.nav-sub-menu > li > a {
        margin: 20px 0px;
        padding: 10px;
    }

    div.collapse.navbar-collapse > ul.nav > li.page-scroll > ul.nav-sub-menu {
        position: absolute;
        top: 80px;
        left: 5px;
        background: var(--asf-gradient);
        min-width: 200px;
        z-index: 1000;
        display: none;
        padding-inline-start: 10px;
    }
}

@media(max-width: 1174px) {
    img.asf-img.asf-img-small.asf-img-float-center {
        margin-left: auto;
        margin-right: auto;
        justify-self: center;
        width: 100%;
        max-width: 80%;
    }
}

@media(max-width: 768px) {
    body::after {
        -webkit-mask-size: 320vw auto;
        mask-size: 320vw auto;
        height: 600px;
    }
    // Shorter ridgeline on mobile
    .hero-ridge {
        height: 100px;
    }
    .hero-ridge-img {
        width: 90%;
        max-width: none;
    }
    .footer-ridge {
        height: 60px;
    }
    .nav-logo {
        height: 70px;
    }
    .page-band {
        min-height: 120px;
        padding: 1.5rem 1.5rem 1.2rem;
    }
    .page-band-title {
        font-size: 1.6em;
    }
    .subpage-spacer {
        height: 88px;
    }
    img.asf-img.asf-img-small.pull-right, img.asf-img.asf-img-small.pull-left {
        margin-left: auto;
        margin-right: auto;
        justify-self: center;
        width: 100%;
        max-width: 80%;
        float: unset !important;
    }
    .main-content table th, .main-content table td {
        padding: 10px 6px;
        font-size: 0.75em;
        white-space: nowrap;
    }
    .main-content table td:first-child {
        font-size: 0.75em;
        width: 15%;
        padding: 8px 4px;
    }
    .main-content table td:last-child {
        line-height: 2;
        white-space: normal;
    }
    .testimonial {
        padding: 1.4em 1.6em;
        margin: 1.5em 0.5em;
    }
    .main-content hr {
        margin: 2rem auto;
        max-width: 80%;
    }
}

// Stop em compounding inside signup form without breaking inherited page font size
.main-content .mc-signup p,
.main-content .mc-signup div {
    font-size: 1em;
}

.main-content .mc-signup h2 {
    font-size: 1.25em;
}

